Fix layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@
   overflow: hidden;
   min-height: 100vh;
 }
+@media (max-width: 493px) {
+  .editor {
+    display: var(--editor-preview);
+  }
+  .graph {
+    display: var(--graph-preview, none);
+  }
+}
 @media (min-width: 494px) {
   #app_root {
     grid-template-areas: "header" "options" "editor" "graph";
@@ -37,6 +45,7 @@
 header {
   grid-area: header;
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
   justify-content: center;
   padding: 20px;
